--- a/Pokemon.html
+++ b/Pokemon.html
@@ -7,7 +7,32 @@
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="../Modules/MyHelper.js"></script>
+    <script src="/Modules/MyHelper.js"></script>
+    <style>
+        body {
+            text-align: center;
+        }
+
+        h1 {
+            font-family: sans-serif;
+            font-size: 30px;
+        }
+
+        button {
+            background-color: white;
+            border: 1px solid gray;
+            color: gray;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: black;
+            color: white;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 
 <body>
@@ -25,39 +50,54 @@
         <button id='addone' onclick="AddPokemon()">Click +1</button>
         <button id='removeone' onclick="removePokemon()">Clear -1</button>
         <button id='loadall' onclick="allPokemon()">Load All</button>
+        <button id='remoceall' onclick="remoceall()">Load All</button>
 
-        <div id='container'>
+        <div id='container'></div>
 
-        </div>
 
         <script>
-            var container = $('container');
+            var container = $('#container');
 
             //Window載入時,執行appendPokemon()方法,新增一張圖片
-            window.onload = appendPokemon();
-
+            window.onload = appendPokemon;
+            //https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png
             function appendPokemon() {
-
+                let img = container.html('<img>');
+                $('img').attr('src', 'https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png');
             }
 
-            function appendPokemonByTemplate() {
-
-            }
-
-            var index = 1;
-
-            //+1
+            var index = 2;
             function AddPokemon() {
+                let num = index.toString().padStart(3, '0');
+                let pokeimg = `https://assets.pokemon.com/assets/cms2/img/pokedex/detail/${num}.png`;
 
+                container.append(`<img src="${pokeimg}">`);
+                index++;
             }
 
 
             function removePokemon() {
-
+                if(index > 0){
+                    index--;
+                }
+                let imgs = $('img');
+                imgs.last().remove();
             }
 
             function allPokemon() {
+                for (let i = 1; i <= 890; i++) {
+                    index++;
+                    let num = index.toString().padStart(3, "0");
+                    let pokeimg = `https://assets.pokemon.com/assets/cms2/img/pokedex/detail/${num}.png`;
 
+                    container.append(`<img src="${pokeimg}">`);
+                }
+            }
+
+            function remoceall() {
+                index = 1;
+                let imgs = $('img');
+                imgs.remove();
             }
 
         </script>
