Change button name

--- a/Pokemon.html
+++ b/Pokemon.html
@@ -50,7 +50,7 @@
         <button id='addone' onclick="AddPokemon()">Click +1</button>
         <button id='removeone' onclick="removePokemon()">Clear -1</button>
         <button id='loadall' onclick="allPokemon()">Load All</button>
-        <button id='remoceall' onclick="remoceall()">Load All</button>
+        <button id='remoceall' onclick="remoceall()">Remove All</button>
 
         <div id='container'></div>
 
