--- a/Line_Basic_Ajex.html
+++ b/Line_Basic_Ajex.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
@@ -22,17 +22,17 @@
 
 
         $.ajax({
-            type: "GET",
+            type: "Get",
             url: 'https://raw.githubusercontent.com/apprunner/FileStorage/master/Temperature.json',
             data: 'data',
-            dataType: 'Json',
+            dataType: 'json',
             success: function (response) {
                 var ctx = $('#lineChart');
                 var chart = new Chart(ctx, {
                     type: 'line',
                     data: {
                         labels: response.Label,
-                        datsets: [{
+                        datasets: [{
                             label: response.City,
                             data: response.Data,
                             fill: false,
